# yt-video-summarizer

./: .cursorrules  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  PHASE_0_COMPLETED.md  README.md  codebase.xml  pyproject.toml  pytest.ini  requirements.txt
.cursor/docs/: audio_narration_processing.md  category_classification_process.md  video_download_process.md  vitaly-transcription-categorization-codebase.xml  youtube_integration_guide.md
.cursor/notes/: PLAN.md  analysis_notes.md
.cursor/refinements/: initial_review_suggestions.md
.cursor/rules/: asr_whisper_rules.mdc  audio_separation_demucs_rules.mdc  audio_understanding_clap_rules.mdc  config_management_rules.mdc  db_postgres_rules.mdc  gcp_pubsub_rules.mdc  general_python_rules.mdc  llm_openai_gpt_rules.mdc  ocr_easyocr_rules.mdc  pipeline_orchestration_rules.mdc  pytorch_ml_integration_rules.mdc  setup_scripts_rules.mdc  vad_silero_rules.mdc  video_audio_processing_rules.mdc
.cursor/tests/: TEST.md
.cursor/yt_transcriber_test/: TEST.md
docs/: MODEL_CONFIGURATION.md  YOUTUBE_SCRIPT_GENERATOR.md  scratchpad.md
docs/implementation-plan/: scope-simplification.md  script-generator-from-idea.md  video-improvement-agent.md  video-summarization.md  youtube-script-generator.md
frontend/: README.md  __init__.py  gradio_app.py
output_summaries/: Claude_Sonnet_45_Is_INSANE_Full_Review_Real_Examples_vid_z8xEr5NrYHU_job_20251003230146616694_summary.md  Claude_Sonnet_45_Is_INSANE_Full_Review_Real_Examples_vid_z8xEr5NrYHU_job_20251003231318969271_summary_EN.md  Claude_Sonnet_45_Is_INSANE_Full_Review_Real_Examples_vid_z8xEr5NrYHU_job_20251003231318969271_summary_ES.md
test/: README.md  check_pytorch_cuda.py  conftest.py  test_downloader.py  test_infrastructure.py  test_integration.py  test_summarizer.py  test_transcriber.py  test_youtube_script_generator.py
youtube_script_generator/: __init__.py  batch_processor.py  models.py  pattern_analyzer.py  query_optimizer.py  script_generator.py  synthesizer.py  translator.py  youtube_searcher.py
yt_transcriber/: __init__.py  cli.py  config.py  downloader.py  main.py  summarizer.py  transcriber.py  utils.py
